<resources>
    <string name="app_name">ABCAll</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="username">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="signIn">Ingresar</string>
    <string name="signInTitle">Iniciar sesión</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="registro">Registro</string>
    <string name="abcall_icon">ABCall-icon</string>
    <string name="select_issue_type">Seleccione el tipo de incidencia...</string>
    <string name="subject">Asunto:</string>
    <string name="comments">Comentarios</string>
    <string name="cancel">cancel</string>

    <string name="logout">Cerrar sesión</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_user">Nuevo usuario</string>
    <string name="Name">Nombre</string>
    <string name="Lastname">Apellido</string>
    <string name="Identification_type">Tipo de identificación</string>
    <string name="Identification_number">Número de identificación</string>
    <string name="Email">Correo electrónico</string>
    <string name="Cellphone">Teléfono</string>
    <string name="Username">Usuario</string>
    <string name="Confirm_password">Confirmar contrasena</string>
    <string name="Registry">Registrar</string>
    <string name="Clean">Limpiar</string>
    <string name="change_language">Cambiar idioma</string>
    <string name="Attach_documents">Adjuntar documentos</string>
    <string name="assisted">Asistida</string>
    <string name="enter_a_message">Escribe un mensaje</string>
    <string name="send">Enviar</string>
    <string name="issues">Incidencias</string>
    <string name="reports">Reportes</string>
    <string name="issue_detail">Detalle incidencia</string>
    <string name="select_an_option">Selecciona una opción</string>
    <string name="submitting_issue">Enviando incidencia</string>
    <string name="please_wait_a_moment_while_the_attachment_is_are_being_sent">Espere un momento mientras se envía(n) el(los) adjunto(s)</string>
    <string name="issue_successfully_submitted">Incidencia enviada satisfactoriamente</string>
    <string name="your_issue_was_successfully_registered">Su incidencia fué registrada exitosamente, podrá visualizarla en su listado de incidencias</string>
    <string name="error_submitting_issue">Error enviando incidencia</string>
    <string name="please_try_again_in_a_few_minutes">Por favor vuelva a intentarlo en unos minutos</string>
    <string name="user_registration">Registro de usuario</string>
    <string name="unable_to_connect_to_the_server">No se pudo conectar con el servidor. Por favor, verifica tu conexión a internet.</string>
    <string name="file_deleted">Archivo eliminado</string>
    <string name="file_could_not_be_retrieved">No se pudo obtener el archivo.</string>
    <string name="you_can_only_add_up_to">Solo puedes agregar hasta %1$s archivos.</string>
    <string name="create_issues">Crear incidencias</string>
    <string name="issue_type_is_required">Tipo de incidencia obligatoria</string>
    <string name="subject_required">Asunto obligatorio</string>
    <string name="detail_required">Detalle obligatorio</string>
    <string name="unknown_issue_type">Tipo de incidencia desconocida</string>
    <string name="unknown_option">Opción desconocida</string>
    <string name="summary_issue">Resumen de la incidencia</string>
    <string name="issue_type">Tipo de incidencia</string>
    <string name="detail">Detalle</string>
    <string name="attaches">Adjuntos</string>
    <string name="date">Fecha</string>
    <string name="type">Tipo</string>
    <string name="state">Estado</string>
    <string name="process">Proceso</string>
    <string name="agent">Asesor:</string>
    <string name="observation">Observación</string>
    <string name="welcome_chatbot">Bienvenido a nuestro chat, es un placer guiarlo para crear una nueva incidencia.\nEn cualquier momento puede agregar documentos en el ícono de adjuntar que aparece en la parte inferior</string>
    <string name="show_issue_summary">Ver resumen de la incidencia</string>
    <string name="exit">Salir</string>
    <string name="select_state">Selecciona un estado</string>
    <string name="all">Todos</string>
    <string name="select_channel">Selecciona un canal</string>
    <string name="start_date_cannot_be_greater_than_end_date">La fecha de inicio no puede ser mayor que la fecha de fin.</string>
    <string name="dates_cannot_exceed_current_date">Las fechas no pueden superar la fecha actual.</string>
    <string name="incident_distribution_by_status">Distribución de incidentes por estado</string>
    <string name="issue_by_channel">Incidencias por canal</string>
    <string name="start_date">Fecha inicio</string>
    <string name="end_date">Fecha Fin</string>
    <string name="issue_channels">Canales incidencia</string>
    <string name="issue_states">Estados incidencia</string>
    <string name="monitor">Monitores</string>
</resources>