<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_user_register"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.UserRegisterActivity"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:fitsSystemWindows="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_user"
            android:gravity="center"
            android:textColor="@color/abcall_primary_color"
            android:textSize="30sp"
            android:textStyle="bold"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ilFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="clear_text"
            app:endIconTint="@color/abcall_third_one"
            android:layout_marginTop="16dp"
            android:hint="@string/Name"
            style="@style/customLoginInputText"
            app:placeholderTextAppearance="@style/customLoginHintTextAppearance">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_firstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="text|textNoSuggestions"
                style="@style/customLoginInputTextAppearance"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ilLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="clear_text"
            app:endIconTint="@color/abcall_third_one"
            android:layout_marginTop="16dp"
            android:hint="@string/Lastname"
            style="@style/customLoginInputText"
            app:placeholderTextAppearance="@style/customLoginHintTextAppearance">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_lastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="text|textNoSuggestions"
                style="@style/customLoginInputTextAppearance"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ilIdentificationType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="clear_text"
            app:endIconTint="@color/abcall_third_one"
            android:layout_marginTop="16dp"
            android:hint="@string/Identification_type"
            style="@style/customLoginInputText"
            android:clickable="true"
            app:placeholderTextAppearance="@style/customLoginHintTextAppearance">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_identification_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="text|textNoSuggestions"
                style="@style/customLoginInputTextAppearance"
                android:focusable="false"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ilIdentificationNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="clear_text"
            app:endIconTint="@color/abcall_third_one"
            android:layout_marginTop="16dp"
            android:hint="@string/Identification_number"
            style="@style/customLoginInputText"
            app:placeholderTextAppearance="@style/customLoginHintTextAppearance">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_identification_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="text|textNoSuggestions"
                style="@style/customLoginInputTextAppearance"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ilEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="clear_text"
            app:endIconTint="@color/abcall_third_one"
            android:layout_marginTop="16dp"
            android:hint="@string/Email"
            style="@style/customLoginInputText"
            app:placeholderTextAppearance="@style/customLoginHintTextAppearance">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="text|textNoSuggestions"
                style="@style/customLoginInputTextAppearance"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ilPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="clear_text"
            app:endIconTint="@color/abcall_third_one"
            android:layout_marginTop="16dp"
            android:hint="@string/Cellphone"
            style="@style/customLoginInputText"
            app:placeholderTextAppearance="@style/customLoginHintTextAppearance">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="text|textNoSuggestions"
                style="@style/customLoginInputTextAppearance"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ilUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="clear_text"
            app:endIconTint="@color/abcall_third_one"
            android:layout_marginTop="16dp"
            android:hint="@string/Username"
            style="@style/customLoginInputText"
            app:placeholderTextAppearance="@style/customLoginHintTextAppearance">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="text|textNoSuggestions"
                style="@style/customLoginInputTextAppearance"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ilPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="password_toggle"
            android:layout_marginTop="16dp"
            app:endIconTint="@color/abcall_third_one"
            android:hint="@string/password"
            style="@style/customLoginInputText"
            app:placeholderTextAppearance="@style/customLoginHintTextAppearance">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="textPassword|textNoSuggestions"
                style="@style/customLoginInputTextAppearance"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ilCheckPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="password_toggle"
            android:layout_marginTop="16dp"
            app:endIconTint="@color/abcall_third_one"
            android:hint="@string/Confirm_password"
            style="@style/customLoginInputText"
            app:placeholderTextAppearance="@style/customLoginHintTextAppearance">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_checkPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="textPassword|textNoSuggestions"
                style="@style/customLoginInputTextAppearance"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/customPrimaryButton"
            app:cornerRadius="20sp"
            android:layout_marginTop="16dp"
            android:text="@string/Registry"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_clear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/customSecondaryButton"
            app:cornerRadius="20sp"
            android:layout_marginTop="16dp"
            android:text="@string/Clean"/>

    </LinearLayout>

</ScrollView>
